--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="card">
-        <div>
+        <div class="estrela">
         <img src="./images/icon-star.svg" alt="icone de uma estrela laranja">
      </div>
 
@@ -19,13 +19,15 @@
 
      <p>Conte-nos como foi nossa ajuda com sua solicitação. Agradecemos muito seu feedback para podermos melhorar nosso atendimento!</p>
 
-     <div>
+     <div class="botoes">
         <button>1</button>
         <button>2</button>
         <button>3</button>
         <button>4</button>
         <button>5</button>
      </div>
+
+     <button>Enviar</button>
     </div>
 </body>
 </html>
